added simple meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Jakob Goergen"
       content="personal website"
     />
+    <!-- facebook open graph tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jakob Goergen personal website" />
+ 
+    <!-- twitter card tags additive with the og: tags -->
+    <meta name="twitter:card" content="Jakob Goergen personal website">
+    <meta name="twitter:title" value="Jakob Goergen" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
